added section styling and logic to index and views, fixed result key error, added home link to top of base.html, reversed output of get_section_indices and its unit test

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,16 @@
     <title> {% block title %} GutenReader {% endblock %} </title>
   </head>
   <body>
+      <div class="mb-3 p-3 bg-dark text-white text-center shadow">
+        <h2> <a class=" text-white text-decoration-none" href="/"> GutenReader </a> </h2>
+      </div>
+  
     
     {% block Content %} 
         Content Missing 
     {% endblock %}
     
-    <div class=" p-4 bg-dark text-white text-center">
+    <div class="mt-2 p-4 bg-dark text-white text-center">
         <p>
             All books are sourced from <a href="https://www.gutenberg.org"> Project Gutenberg </a>
         </p>
