Updated all templates to BS5, added various styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         Content Missing 
     {% endblock %}
     
-    <div class="mt-2 p-4 bg-dark text-white text-center">
+    <div class="mt-2 p-4 bg-dark bg-gradient text-white text-center">
         <p>
             All books are sourced from <a href="https://www.gutenberg.org"> Project Gutenberg </a>
         </p>
