--- a/templates/book_index.html
+++ b/templates/book_index.html
@@ -3,10 +3,23 @@
 {%  block Content %}
 
 <div class = "container p-20  border-start border-end border-2 shadow">
+    <div class="d-flex flex-wrap">
+        <h2 class="fw-bolder"> {{ Title }}</h2> <h2 class="text-muted ms-3">Index</h2>
+    </div>
+    <br>
+    <h4>By {{ Author }}, in {{ Language }}</h4>
+    <br>
     <h4>
-        {{ Title }} Index
+        Tags:
     </h4>
-    <p>By {{ Author }}, in {{ Language }}</p>
+    <div class="d-flex flex-wrap p-1 m-1">
+      {% for tag in tag_list %}
+        <div class=" card shadow-sm m-2 p-2 border border-info border-2 rounded-3"
+             style="max-width: 22rem; height: 2rem">
+            <h6 class="fw-bold  text-dark position-relative top-50 start-50 translate-middle">{{ tag }}</h6>
+        </div>
+      {% endfor %}
+    </div>
 
     <table class="table table-hover w-50 p-5 ">
       <thead>
