--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,11 @@
         <h2> <a class=" text-white text-decoration-none" href="/"> GutenReader </a> </h2>
       </div>
   
-    
+    <div class="container mx-auto col-10 border-start border-end border-2 shadow min-vh-100 row justify-content-center">
     {% block Content %} 
         Content Missing 
     {% endblock %}
+    </div>
     
     <div class="mt-2 p-4 bg-dark bg-gradient text-white text-center">
         <p>
