--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 {%  block Title %} {{ Title }} {% endblock %}
 {%  block Content %}
-<div class = "container p-20 min-vh-100 border-start border-end border-2 shadow">
-    <h2 class="ms-2 p-2">
-        Books
-    </h2>
-    <div class="d-flex flex-wrap m-3 ">
-      {% for book in books %}
-        <div class="card m-2 shadow-sm" style="width: 16rem; height: 9rem">
-          <div class="card-body">
-            <a class="text-decoration-none" href="/book/{{ book.pk }}"><h5 class="card-title">{{ book.title }}</h5></a>
-            <h6 class="card-subtitle mb-1 text-muted">{{ book.author }}</h6>
-            <a href="/book/{{ book.pk }}/1" class="btn btn-outline-primary position-absolute bottom-0 end-0 m-2">Part 1</a>
-          </div>
+    <div class="container p-5 ms-5">
+        <h2 class="">
+            Books
+        </h2>
+        <div class="d-flex flex-wrap ">
+          {% for book in books %}
+            <div class="card m-2 shadow-sm" style="width: 16rem; height: 9rem">
+              <div class="card-body">
+                <a class="text-decoration-none" href="/book/{{ book.pk }}"><h5 class="card-title">{{ book.title }}</h5></a>
+                <h6 class="card-subtitle mb-1 text-muted">{{ book.author }}</h6>
+                <a href="/book/{{ book.pk }}/1" class="btn btn-outline-primary position-absolute bottom-0 end-0 m-2">Part 1</a>
+              </div>
+            </div>
+          {% endfor %}
         </div>
-      {% endfor %}
     </div>
-</div>
 {% endblock %}
