fixed bottom of tags being clipped

--- a/templates/book_index.html
+++ b/templates/book_index.html
@@ -23,7 +23,7 @@
       {% for tag in tag_list %}
         <div class="d-block card shadow-sm m-2 p-2 border border-info rounded-3 border-2"
              style="max-width: 22rem; height: 2rem">
-            <h6 class="m-0 fw-bolder text-truncate text-dark position-relative top-50 start-50 translate-middle ">{{ tag }}</h6>
+            <h6 class="m-0 p-1 fw-bolder text-truncate text-dark position-relative top-50 start-50 translate-middle ">{{ tag }}</h6>
         </div>
       {% endfor %}
     </div>
