--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title> {% block title %} GutenReader {% endblock %} </title>
+    <title> {{ Title }} </title>
   </head>
   <body >
       <div class="mb-3 p-3 bg-dark text-white text-center shadow">
