--- a/templates/book_index.html
+++ b/templates/book_index.html
@@ -23,7 +23,9 @@
       {% for tag in tag_list %}
         <div class="d-block card shadow-sm m-2 p-2 border border-info rounded-3 border-2"
              style="max-width: 22rem; height: 2rem">
-            <h6 class="m-0 p-1 fw-bolder text-truncate text-dark position-relative top-50 start-50 translate-middle ">{{ tag }}</h6>
+            <h6 class="m-0 p-1 fw-bolder text-truncate text-dark position-relative top-50 start-50 translate-middle ">
+                {{ tag }}
+            </h6>
         </div>
       {% endfor %}
     </div>
@@ -31,15 +33,27 @@
         <table class="table table-hover p-2 ">
           <thead>
             <tr>
-                <th class="fs-3 fw-normal text-muted">Index</th>
+                <th class="fs-3 fw-normal text-muted">
+                    Index
+                </th>
             </tr>
           </thead>
           <tbody class=" bg-light">
             {% for chap in Chap_Titles %}
               {% if chap.1 == -1 %}
-                <tr class="border-bottom border-dark"><th class="text-dark">{{ chap.0 }}</th></tr>
+                <tr class="border-bottom border-dark">
+                    <th class="text-dark">
+                        {{ chap.0 }}
+                    </th>
+                </tr>
               {% else %}
-                <tr class="border-bottom "><td class="p-0" ><a class=" nav-link width-100 height-100 text-primary  " href="/book/{{ book_id }}/{{ chap.1 }}"> {{ chap.0 }} </a></td></tr>
+                <tr class="border-bottom ">
+                    <td class="p-0" >
+                        <a class=" nav-link width-100 height-100 text-primary" 
+                           href="/books/{{ book_id }}/{{ chap.1 }}"> {{ chap.0 }} 
+                        </a>
+                    </td>
+                </tr>
               {% endif %}
             {% endfor %}
           </tbody>
